--- a/project-lineForWalk.html
+++ b/project-lineForWalk.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - #</title>
+	<title>Jake Elwes - "Take a Line for a Walk</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -68,7 +68,7 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">#</h3>
+							<h3 class="border-top">"Take a Line for a Walk</h3>
 							<p class="project-desc">2012</p>
 
 							<p>TextTextText</p>
@@ -99,7 +99,7 @@
 
 			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/project-#/" alt="" />
+				<img src="images/project-"Take a Line for a Walk/" alt="" />
 
 			</div><!-- // .desktop-9 -->
 
