--- a/project-pornCircles.html
+++ b/project-pornCircles.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - #</title>
+	<title>Jake Elwes - Porn Saturation</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -68,7 +68,7 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">#</h3>
+							<h3 class="border-top">Porn Saturation</h3>
 							<p class="project-desc">2015</p>
 
 							<p>TextTextText</p>
@@ -95,7 +95,7 @@
 
 			<div class="desktop-9 tablet-12 columns">
 
-				<img src="images/project-#/" alt="" />
+				<img src="images/project-Porn Saturation/" alt="" />
 
 			</div><!-- // .desktop-9 -->
 
