ref header.html

--- a/about.html
+++ b/about.html
@@ -53,6 +53,7 @@
 
 
 	<nav id="navMenu"></nav>
+<script src="header.js"></script>
 
 	<!-- About
 	================================================== -->
@@ -65,7 +66,7 @@
 			<div class="clear"></div>
 
 			<div class="desktop-3 tablet-12 columns">
-				<h2>Services</h2>
+				<h2>About</h2>
 			</div>
 			<div class="desktop-9 tablet-12 columns">
 				<p class="page-desc">Make a memorable experience. Let your brand act in a way that well exceeds users' expectations. See what we can do to help you. </p>
@@ -82,7 +83,7 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 tablet-6 columns">
-							<h4>Illustration</h4>
+							<h4>Bio</h4>
 							<p>Architectural drawings are made according to a set of conventions, which include particular views (floor plan, section etc.), sheet sizes, units of measurement and scales, annotation and cross referencing. Conventionally, drawings were made in ink on paper or a similar material, and any copies required had to be laboriously made by hand. </p>
 						</div><!-- // .desktop-6 -->
 
@@ -98,7 +99,7 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 tablet-6 columns">
-							<h4>Digital</h4>
+							<h4>Education</h4>
 							<p>The development of the computer had a major impact on the methods used to design and create technical drawings, making manual draughting almost obsolete, and opening up new possibilities of form using organic shapes and complex geometry. Today the vast majority of drawings are created using CAD software.</p>
 						</div><!-- // .desktop-6 -->
 
@@ -114,7 +115,7 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 pull-3 tablet-6 tablet-pull-0 columns">
-							<h4>Architectural CG</h4>
+							<h4>Exhibtions</h4>
 							<p>Design, finance, and legal aspects overlap and interrelate. The design must be not only structurally sound and appropriate for the use and location, but must also be financially possible to build. The financial structure must accommodate the need for building the design provided, and must pay amounts that are legally owed. </p>
 						</div><!-- // .desktop-6 -->
 
@@ -130,7 +131,7 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 tablet-6 columns">
-							<h4>Structural Robustness</h4>
+							<h4>Blah</h4>
 							<p>A structure designed and constructed to have robustness will not suffer from disproportionate collapse (progressive collapse) under accidental loading. When it comes to steel framed buildings, to achieve robustness is about designing connections appropriately. Cncrete structures is less problem with structural robustness.</p>
 						</div><!-- // .desktop-6 -->
 
@@ -148,7 +149,6 @@
 
 	<nav id="footer"></nav>
 
-	<script src="header.js"></script>
 
 	<!-- JS
 	================================================== -->
