--- a/footer.html
+++ b/footer.html
@@ -10,6 +10,8 @@
       <ul id="social">
         <li><a href="https://www.facebook.com/JakeElwes/" class="hoverMe">Facebook</a></li>
         <li><a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="hoverMe">LinkedIn</a></li>
+        <li><a href="#" class="hoverMe">Contact</a></li>
+        <li><a href="about.html" class="hoverMe">About</a></li>
       </ul><!-- // #social -->
     </div><!-- // .desktop-9 -->
 
