--- a/project-circuit.html
+++ b/project-circuit.html
@@ -54,6 +54,7 @@
 
 
 	<nav id="navMenu"></nav>
+<script src="header.js"></script>
 
 
 	<!-- Work - Single Page (Left Sidebar)
@@ -97,10 +98,10 @@
 
 				<img src="images/project-circuit/1.jpg" alt="" />
 				<img src="images/project-circuit/1b.jpg" alt="" />
-				<img src="images/project-circuit/1c.png" alt="" />
+				<img src="images/project-circuit/1c.jpg" alt="" />
 				<img src="images/project-circuit/2.jpg" alt="" />
 				<img src="images/project-circuit/3.jpg" alt="" />
-				<img src="images/project-circuit/4.png" alt="" />
+				<img src="images/project-circuit/4.jpg" alt="" />
 				<img src="images/project-circuit/5.jpg" alt="" />
 				<img src="images/project-circuit/6.jpg" alt="" />
 				<img src="images/project-circuit/7.jpg" alt="" />
@@ -117,7 +118,6 @@
 
 		<nav id="footer"></nav>
 
-		<script src="header.js"></script>
 	<!-- JS
 	================================================== -->
 	<!--
