--- a/index.html
+++ b/index.html
@@ -63,8 +63,44 @@
 <body>
 	<!-- Header - Half Logo
 	================================================== -->
-
 		<nav id="navMenu"></nav>
+		<script src="header.js"></script>
+
+		<section id="header2">
+
+		<div class="container">
+
+			<div class="desktop-12 columns"><div class="border-top" style="padding-top: 0px;"></div></div>
+
+			<div class="desktop-4 tablet-6 columns">
+				<!-- icons to try for about fa-eye fa-male fa-plus -->
+				<a href="about.html" class="btn-social btn-outline"><p><i class="fa fa-fw fa-eye" style="padding-right: 10%;font-size: 17px;"></i>ABOUT</p></a>
+			</div><!-- // .desktop-3 -->
+			<div class="desktop-4 columns"><p></p></div>
+			<div class="desktop-4 tablet-8 columns">
+
+				<ul id="social">
+					<li><a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a></li>
+					<li><a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a></li>
+					<li><a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
+					<li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
+				</ul><!-- // #social -->
+
+				<!-- <a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+				<a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+				<a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a>
+				<a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+				<a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a> -->
+
+			</div><!-- // .desktop-9 -->
+
+
+
+			<div class="clear"></div>
+		</div><!-- // .container -->
+	</section><!-- // section#header -->
+
 
 	<!-- Works (Three Columns)
 	================================================== -->
@@ -366,7 +402,7 @@
 	<nav id="footer"></nav>
 
 
-		<script src="header.js"></script>
+
 
 	<!-- JS
 	================================================== -->
