--- a/project-DaDaTa.html
+++ b/project-DaDaTa.html
@@ -55,6 +55,7 @@
 
 
 	<nav id="navMenu"></nav>
+<script src="header.js"></script>
 
 	<!-- Work - Single Page (Right Sidebar)
 	================================================== -->
