--- a/project-mappingFacebook.html
+++ b/project-mappingFacebook.html
@@ -56,6 +56,7 @@
 
 
 	<nav id="navMenu"></nav>
+<script src="header.js"></script>
 
 	<!-- Work - Single Page (Right Sidebar)
 	================================================== -->
