finished header +fbmap

--- a/footer.html
+++ b/footer.html
@@ -1,20 +1,47 @@
-<!-- Footer
-================================================== -->
+
+<section id="header2">
+
+<div class="container">
+
+  <div class="desktop-12 columns"><div class="border-top" style="padding-top: 0px;"></div></div>
+
+  <div class="desktop-4 tablet-6 columns">
+    <!-- icons to try for about fa-eye fa-male fa-plus -->
+    <a href="about.html" class="btn-social btn-outline"><p><i class="fa fa-fw fa-eye" style="padding-right: 20px;font-size: 17px;"></i>ABOUT</p></a>
+  </div><!-- // .desktop-3 -->
+
+  <div class="desktop-4 tablet-6 columns">
+
+    <ul id="social">
+      <li><a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a></li>
+      <li><a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a></li>
+      <li><a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
+      <li><a href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
+    </ul><!-- // #social -->
+
+    <!-- <a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+    <a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+    <a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a>
+    <a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a> -->
+
+  </div><!-- // .desktop-9 -->
+  <!-- <div class="desktop-4 columns"><p></p></div> -->
+
+
+  <div class="clear"></div>
+</div><!-- // .container -->
+</section><!-- // section#header -->
+
+
+
+
 <section id="footer">
   <div class="container">
     <div class="desktop-3 columns">
       <p>Copyright &copy; <a class="italic">Jake Elwes 2016</a></p>
     </div><!-- // .desktop-3 -->
-
-    <div class="desktop-9 columns">
-      <ul id="social">
-        <li><a href="https://www.facebook.com/JakeElwes/" class="hoverMe">Facebook</a></li>
-        <li><a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="hoverMe">LinkedIn</a></li>
-        <li><a href="#" class="hoverMe">Contact</a></li>
-        <li><a href="about.html" class="hoverMe">About</a></li>
-      </ul><!-- // #social -->
-    </div><!-- // .desktop-9 -->
-
-    <div class="clear"></div>
   </div><!-- // .container -->
-</section><!-- // section#footer -->
+
+  </section><!-- // section#header -->
