--- a/index.html
+++ b/index.html
@@ -72,19 +72,15 @@
 
 			<div class="desktop-12 columns"><div class="border-top" style="padding-top: 0px;"></div></div>
 
+
 			<div class="desktop-4 tablet-6 columns">
-				<!-- icons to try for about fa-eye fa-male fa-plus -->
-				<a href="about.html" class="btn-social btn-outline"><p><i class="fa fa-fw fa-eye" style="padding-right: 10%;font-size: 17px;"></i>ABOUT</p></a>
-			</div><!-- // .desktop-3 -->
-			<div class="desktop-4 columns"><p></p></div>
-			<div class="desktop-4 tablet-8 columns">
 
 				<ul id="social">
 					<li><a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a></li>
 					<li><a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a></li>
 					<li><a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
-					<li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
+					<li><a href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
 				</ul><!-- // #social -->
 
 				<!-- <a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
@@ -94,7 +90,11 @@
 				<a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a> -->
 
 			</div><!-- // .desktop-9 -->
-
+			<!-- <div class="desktop-4 columns"><p></p></div> -->
+			<div class="desktop-4 tablet-6 columns">
+				<!-- icons to try for about fa-eye fa-male fa-plus -->
+				<a href="about.html" class="btn-social btn-outline"><p><i class="fa fa-fw fa-eye" style="padding-right: 20px;font-size: 17px;"></i>ABOUT</p></a>
+			</div><!-- // .desktop-3 -->
 
 
 			<div class="clear"></div>
@@ -380,16 +380,16 @@
 					</div><!-- // .desktop-4 -->
 				</a>
 
-				<a href="project-mappingFacebook.html" class="permalink">
+				<!-- <a href="project-mappingFacebook.html" class="permalink">
 					<div class="desktop-4 tablet-6 columns">
 						<div class="item">
 							<img src="images/project-mappingFacebook.jpg" alt="" />
 
 							<h3>Mapping Facebook Interactive</h3>
 							<span class="category">Digital Prints &amp; Code - 2013</span>
-						</div><!-- // .item -->
-					</div><!-- // .desktop-4 -->
-				</a>
+						</div>
+					</div>
+				</a> -->
 
 				<div class="clear hide-under-tablet"></div>
 
