--- a/project-DaDaTa.html
+++ b/project-DaDaTa.html
@@ -70,21 +70,27 @@
 
 						<div class="box-info">
 							<h3 class="border-top">DaData</h3>
-							<p class="project-desc">2012</p>
+							<p class="project-desc">Video &amp; AI Code - 2016
+</p>
 
-							<p>TextTextText</p>
+							<p>Extracted numbers from over 50 hours of interviews with global tech company executives. They speak in the reductive &amp; apparently objective language of numbers, which denotes code, money, big data and free market ideology, as well as relating to singularity and the public’s lack of knowledge of how digital platforms work.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
 
 					<div class="clear"></div>
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								text
+								Custom python program for number extraction.
+	<br><br>
+	IBM Watson AI Speech to Text.
+
+	</h4>
 							</p>
 						</div><!-- // .box-info -->
 
@@ -111,6 +117,10 @@
 					$(resizeDivs);
 					$(window).resize(resizeDivs);
 				</script>
+
+				<br></br>
+				Interviews with: Mark Zuckerberg - CEO: Facebook, Jeff Benzos - CEO: Amazon, Brian Chesky - CEO: Airbnb, Larry Page &amp; Sergey Brin - Founders: Google, Peter Thiel - Founder: PayPal Palantir &amp; Marc Andreessen - Founder: Netscape, Steve Jobs - Founder: Apple Pixar, Nick Woodman - Founder: GoPro, Jack Dorsey - CEO: Twitter, James Park - CEO: Fitbit, Tim Cook - CEO: Apple, Reid Hoffman - Founder: LinkedIn, Stewart Butterfield - Founder: Flickr Slack, Drew Houston - Founder: Dropbox, Jack Ma - Founder: Alibaba Group, Jimmy Wales - CEO: Wikipedia, Niklas Zennström - Founder: Skype, Sean Rad - Founder: Tinder, Travis Kalanick - Founder: Uber, Satya Nadella - CEO: Microsoft, Elon Musk - Founder: SpaceX: Tesla &amp; Paypal, Bill Gates - Founder: Microsoft, Devin Wenig - Founder: eBay, Kevin Systrom - Founder: Instagram, Paul Eremenko - CEO: Airbus Group, Reid Hoffman - Founder: LinkedIn, Aaron Levie - Founder: Box, Jonathan Ive - CDO: Apple, Dustin Moskovitz -  Co-Founder: Facebook, Ben Silbermann - CEO: Pinterest, Reed Hastings - Founder: Netflix, Evan Spiegel - Founder: Snapchat, Daniel Ek - Founder: Spotify.
+
 
 			</div><!-- // .desktop-9 -->
 
