--- a/project-androidsSheep.html
+++ b/project-androidsSheep.html
@@ -70,7 +70,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">"Do Androids Dream of Electric Sheep?</h3>
-							<p class="project-desc">Video & AI Code - London 2016</p>
+							<p class="project-desc">Video &amp; AI Code - London 2016</p>
 
 							<p>Neural networks are given thousands of images and effectively work out using their own means how to classify the different images, you can then ask the model to generate you an image from scratch, the essence of what the computer has learnt about what sheep look like.</p>
 						</div><!-- // .box-info -->
