--- a/project-barberFugue.html
+++ b/project-barberFugue.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - #</title>
+	<title>Jake Elwes - Barber Fugue</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -104,8 +104,7 @@ HD Video (4 minutes)
 
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-				<iframe id="vid2" src="https://player.vimeo.com/video/198347274?color=ffffff&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<br></br>
+<id="vid2" iframe src="https://player.vimeo.com/video/198347274?title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>				<br></br>
 
 				<script>
 					function resizeDivs() {
