--- a/project-breakingOut.html
+++ b/project-breakingOut.html
@@ -71,9 +71,11 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Breaking Out</h3>
-							<p class="project-desc">2015</p>
+							<p class="project-desc">Sculpture &amp; Digital Renders - 2014
+</p>
 
-							<p>TextTextText</p>
+							<p>Laser-cut polyhedrons encage virtual forms suggesting the collision of digital and physical realms. The wooden cages are lined with digital prints of computer modelled sculptures (zbrush + cinema4D). These are rendered using advanced lighting techniques and other simulated physical phenomena.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -83,7 +85,8 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Text
+								Mixed media sculptures (variable dimensions)
+
 							</p>
 						</div><!-- // .box-info -->
 
