--- a/project-computerCrash.html
+++ b/project-computerCrash.html
@@ -70,9 +70,11 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Computer Crash</h3>
-							<p class="project-desc">2012</p>
+							<p class="project-desc">Sculpture - 2015 &amp; 2012
+</p>
 
-							<p>TextTextText</p>
+							<p>Sculptures made from my old computers, exploring obsolescence in technology and media archeology.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -84,7 +86,11 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								text
+								Concrete sculpture 80x80x110cm<br><br>
+
+Resin encapsulated computer components 5x10x25cm<br><br>
+
+Photograms 20x30cm
 							</p>
 						</div><!-- // .box-info -->
 
