--- a/project-dataPlot.html
+++ b/project-dataPlot.html
@@ -72,7 +72,7 @@
 							<h3 class="border-top">Big Data Plots</h3>
 							<p class="project-desc">2015</p>
 
-							<p>TextTextText</p>
+							<p>Segments of big data networks are plotted using an ink brush. Gathered from public data sources and social media sites &amp; visualised using different graph layout algorithms. Water washes away parts of the diagrams as a counterpoint to the objective nature of the content.</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -82,7 +82,8 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Text
+								Ink plotted prints (sizes ranging from 15-40cm)
+
 							</p>
 						</div><!-- // .box-info -->
 
