--- a/project-digitalBlood.html
+++ b/project-digitalBlood.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - Iris0x0a2e-Retina (digital blood)</title>
+	<title>Jake Elwes - Iris0x0a2e-Retina</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -69,10 +69,12 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">Iris0x0a2e-Retina (digital blood)</h3>
-							<p class="project-desc">2015</p>
+							<h3 class="border-top">Iris0x0a2e-Retina</h3>
+							<p class="project-desc">Video - 2015
+</p>
 
-							<p>TextTextText</p>
+							<p>A time-lapse film of a broken laptop screen (model Iris0x0a2e-Retina) which seems to ooze a digital blood, with inky black fluid flowing though the rows of pixels.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
