--- a/project-digitalTouch.html
+++ b/project-digitalTouch.html
@@ -70,9 +70,10 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Digital Caress</h3>
-							<p class="project-desc">2015</p>
+							<p class="project-desc">Photographic Prints - 2015</p>
 
-							<p>TextTextText</p>
+							<p>These gestures are the residue left on the screen of an iPhone from human touch (the grease of one’s finger). The gestures and twitches were often recognisable according to the app eg. Tinder.app - swiping left and right, and Phone.app - imprint from stubble. Each image derives from a different app, displaying the material remnants of interacting with a virtual window.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -82,7 +83,8 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Text
+								Large format inkjet prints on Somerset satin paper 110x60cm.
+
 							</p>
 						</div><!-- // .box-info -->
 
