--- a/project-drawingTennis.html
+++ b/project-drawingTennis.html
@@ -70,9 +70,13 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Drawing Tennis</h3>
-							<p class="project-desc">2015</p>
+							<p class="project-desc">Interactive Web - 2015
+</p>
 
-							<p>TextTextText</p>
+							<p>DrawingTennis is a crowd sourced collaborative drawing app playing on the idea of erasing the image which came before.<br>
+
+Multiple drawings are on the go, anybody can add to a drawing with the one constraint that they have to draw in the opposite colour to the last drawing (black or white). Some images wiped out and dominated others, some drew translucent patterns over the top and some added tiny figurative details. This can be seen when flicking though the evolution of each image.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -82,7 +86,9 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Text
+								Custom web code - <br>
+front-end with D3.js<br>
+back-end node.js server &amp; MongoDB
 							</p>
 						</div><!-- // .box-info -->
 
