--- a/project-haikuNews.html
+++ b/project-haikuNews.html
@@ -70,9 +70,13 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Haiku News</h3>
-							<p class="project-desc">2015</p>
+							<p class="project-desc">Web &amp; AI Code (collaboration) - Berlin 2016
+</p>
 
-							<p>TextTextText</p>
+							<p>Collaboration with Roland Arnoldt <br>
+
+An AI algorithm (convolutional neural network) writes haikus about images being gathered live from current news sources. The haikus are made up of captions written and chosen entirely by the computer. They are then handwritten by a computer trained on many instances of human handwriting.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -82,7 +86,14 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Text
+								Custom Python code using syllable counting (collab. Roland Arnoldt)
+<br><br>
+Custom Python code scraping live news images. <br><br>
+
+Dense Caption generation cs.stanford.edu/people/karpathy/densecap/<br><br>
+
+Handwriting Recurrent Neural Network www.cs.toronto.edu/~graves/handwriting.html
+
 							</p>
 						</div><!-- // .box-info -->
 
