--- a/project-lineForWalk.html
+++ b/project-lineForWalk.html
@@ -70,9 +70,11 @@
 
 						<div class="box-info">
 							<h3 class="border-top">"Take a Line for a Walk</h3>
-							<p class="project-desc">2012</p>
+							<p class="project-desc">iPhone App - 2015
+</p>
 
-							<p>TextTextText</p>
+							<p>iPhone app which generates images solely from the motion and colours from the camera. It acts as a tool to capture ones phenomenological experience of a space (non-linear and experiential), similar to that of a memory image.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -84,7 +86,7 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								text
+								Custom iPhone app.
 							</p>
 						</div><!-- // .box-info -->
 
