--- a/project-mappingFacebook.html
+++ b/project-mappingFacebook.html
@@ -71,9 +71,11 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Mapping Facebook</h3>
-							<p class="project-desc">2012</p>
+							<p class="project-desc">Digital Prints & Code - 2013
+</p>
 
-							<p>TextTextText</p>
+							<p>An aesthetic algorithm I used to map all my Facebook friends, creating an organic cluster of friendships and connections on my page.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -85,7 +87,8 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								text
+								Vector based image
+
 							</p>
 						</div><!-- // .box-info -->
 
