--- a/project-musicalTaxonomy2.html
+++ b/project-musicalTaxonomy2.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - noisy taxonomy II</title>
+	<title>Jake Elwes - taxonomy of sound II</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -69,10 +69,16 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">noisy taxonomy II</h3>
-							<p class="project-desc">2015</p>
+							<h3 class="border-top">taxonomy of sound II</h3>
+							<p class="project-desc">3D Prints - 2016
+</p>
 
-							<p>TextTextText</p>
+							<p>These 3D printed forms are generated from a recording of the animal call made by the animal displayed next to it. A custom program analyses the spectral frequencies and then spins it into a 3D form.
+<br><br>
+								'Skullpture' at the Grant Museum 2016
+								https://blogs.ucl.ac.uk/museums/2016/05/26/skullpture-at-the-grant-museum-opens-today/
+
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -82,7 +88,8 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Text
+								Stained White PLA 3D prints <br><br>
+Openframeworks C++ program
 							</p>
 						</div><!-- // .box-info -->
 
