--- a/project-nightSky.html
+++ b/project-nightSky.html
@@ -70,9 +70,11 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Blue Sky Thinking</h3>
-							<p class="project-desc">2012</p>
+							<p class="project-desc">Video & AI Code - 2016
+</p>
 
-							<p>TextTextText</p>
+							<p>A convolutional neural network generates images of the night sky. It starts with random visual noise and then optimises the image through many generations making up each 30 second video.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -84,7 +86,10 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								text
+								Public domain image dataset. <br><br>
+
+PixelCNN/Deep Convolutional Generative Adversarial Neural Network (DCGAN) running on Amazon EC2 GPU Server
+
 							</p>
 						</div><!-- // .box-info -->
 
