--- a/project-pornCircles.html
+++ b/project-pornCircles.html
@@ -70,9 +70,11 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Porn Saturation</h3>
-							<p class="project-desc">2015</p>
+							<p class="project-desc">iPhone &amp; Desktop App - 2015
+</p>
 
-							<p>TextTextText</p>
+							<p>Average colour (emanating outwards from the start of the clip) for the 10 most viewed pornographic videos on the internet.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -82,7 +84,7 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Text
+								Custom C++ Openframeworks desktop application
 							</p>
 						</div><!-- // .box-info -->
 
