--- a/project-soundParticles.html
+++ b/project-soundParticles.html
@@ -70,9 +70,11 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Musical Mesh</h3>
-							<p class="project-desc">2012</p>
+							<p class="project-desc">Real-time Sound Responsive Program - 2015
+</p>
 
-							<p>TextTextText</p>
+							<p>A 3D mesh responds to sounds: when in silence you are faced with a blank screen but particle worlds form and complex behaviour starts to emerge in response to live music or ambient noise. Used as live projection with music performances.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -84,7 +86,8 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								text
+								Custom C++ Openframeworks desktop application
+
 							</p>
 						</div><!-- // .box-info -->
 
