--- a/project-videoParticles.html
+++ b/project-videoParticles.html
@@ -70,11 +70,13 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Video Emitting Digital Particles</h3>
-							<p class="project-desc">2015</p>
-
-							<p>The various forms of elements from different places expose the essence or identity of a subject through eliminating all non-essential forms, features, or concepts. </p>
-						</div><!-- // .box-info -->
-
+							<p class="project-desc">Video & Code (collaboration) - Chicago 2015
+</p>
+<p>
+Sandin image processor* manipulating a digital signal and employing two different generations of video technology.
+<br><br>
+*An analog, Modular Synthesizer, real time, video processing instrument, it provided video processing performance and produced subtle and delicate video effects of a complexity not seen again until well into the digital video revolution.						</div><!-- // .box-info -->
+</p>
 					</div><!-- // .desktop-3 -->
 
 					<div class="desktop-3 tablet-6 mobile-half columns">
@@ -82,7 +84,11 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Relief print
+
+Sandin image processor raw output <br><br>
+
+Custom Openframeworks program as input<br><br>
+
 							</p>
 						</div><!-- // .box-info -->
 
