--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 					<div class="item">
 						<img src="images/project-musicalTaxonomy2.jpg" alt="" />
 
-						<h3>noisy taxonomy II</h3>
+						<h3>taxonomy of sound II</h3>
 						<span class="category">3D Prints - 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
@@ -230,7 +230,7 @@
 					<div class="item">
 						<img src="images/project-musicalTaxonomy.jpg" alt="" />
 
-						<h3>noisy taxonomy</h3>
+						<h3>taxonomy of sound</h3>
 						<span class="category">3D Prints - 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
@@ -302,7 +302,7 @@
 						<div class="item">
 							<img src="images/project-digitalBlood.jpg" alt="" />
 
-							<h3>Iris0x0a2e-Retina (digital blood)</h3>
+							<h3>Iris0x0a2e-Retina</h3>
 							<span class="category">Video - 2015</span>
 						</div><!-- // .item -->
 					</div><!-- // .desktop-4 -->
