--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -102,7 +102,7 @@
 
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-				<iframe id="vid2" src="https://player.vimeo.com/video/196523344?color=ffffff&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<iframe id="vid2" src="https://player.vimeo.com/video/196523344?color=ffffff&title=0&byline=0&portrait=0" <iframe src="https://player.vimeo.com/video/196523344?title=0&byline=0&portrait=0" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				<br></br>
 
 				<script>
