--- a/project-circuit.html
+++ b/project-circuit.html
@@ -70,9 +70,11 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Circuit</h3>
-							<p class="project-desc">2015</p>
-
-							<p>The various forms of elements from different places expose the essence or identity of a subject through eliminating all non-essential forms, features, or concepts. </p>
+							<p class="project-desc">Relief Prints - 2015
+</p>
+<p>
+Relief &amp; Intaglio prints made directly from circuit board surfaces. The circuit boards were prepared by burning to remove components then run through a printing press. They evoke scotched terrain and media archeology.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -82,7 +84,7 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Relief print
+								Relief &amp; Intaglio prints 30x40cm
 							</p>
 						</div><!-- // .box-info -->
 
