--- a/project-digitalWhisper.html
+++ b/project-digitalWhisper.html
@@ -69,11 +69,14 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">Circuit</h3>
-							<p class="project-desc">2016</p>
+							<h3 class="border-top">Digital Whispers
+</h3>
+							<p class="project-desc">Sound &amp; Twitter API - 2016
+</p>
+<p>
+Tweets in a 2 mile radius of the pieces’ installation are whispered by the computer as a live performance.
 
-							<p>The various forms of elements from different places expose the essence or identity of a subject through eliminating all non-essential forms, features, or concepts. </p>
-						</div><!-- // .box-info -->
+</p>					</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
 
@@ -82,7 +85,11 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Relief print
+								Custom Javascript program. <br><br>
+
+Twitter API. <br><br>
+
+Text to speech library.
 							</p>
 						</div><!-- // .box-info -->
 
