--- a/project-iPhoneTouch.html
+++ b/project-iPhoneTouch.html
@@ -70,9 +70,11 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Behind The Screen</h3>
-							<p class="project-desc">2015</p>
+							<p class="project-desc">iPhone App - 2015
+</p>
 
-							<p>TextTextText</p>
+							<p>iPhone app to think about the materiality of ones handheld device. As the screen of the phone is touched the circuitry inside the phone will start to appear around ones finger, corresponding to where the user’s finger is touching. When held for a more prolonged period of time visuals from the camera will start to bleed under ones finger, effectively seeing all the way through the phone back into the physical world.
+</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -82,7 +84,8 @@
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Text
+								Custom iPhone App.
+
 							</p>
 						</div><!-- // .box-info -->
 
