added images to html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="includes/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-	<script type="text/javascript" src="js/logoText.js"></script>
+	<!-- <script type="text/javascript" src="js/logoText.js"></script> -->
 
 	<!--[if lt IE 8]>
 		<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js"></script>
@@ -76,7 +76,7 @@
 			<div class="desktop-4 tablet-6 columns">
 
 				<ul id="social">
-					<li><a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a></li>
+					<li><a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook-official"></i></a></li>
 					<li><a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a></li>
 					<li><a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
