--- a/project-AutoEncodedBuddha.html
+++ b/project-AutoEncodedBuddha.html
@@ -82,7 +82,7 @@
 
 					<div class="clear"></div>
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -135,11 +135,11 @@
 
 				  </script>
 
-					<img src="images/project-AutoEncodedBuddha/1.JPG" alt="" />
+					<img src="images/project-AutoEncodedBuddha/1.JPG" width="70%" alt="" />
 					<img src="images/project-AutoEncodedBuddha/2.JPG" alt="" />
-					<img src="images/project-AutoEncodedBuddha/3.JPG" alt="" />
-					<img src="images/project-AutoEncodedBuddha/4.JPG" alt="" />
-					<img src="images/project-AutoEncodedBuddha/5.JPG" alt="" />
+					<img src="images/project-AutoEncodedBuddha/3.JPG" width="70%"alt="" />
+					<img src="images/project-AutoEncodedBuddha/4.JPG" width="70%"alt="" />
+					<img src="images/project-AutoEncodedBuddha/5.JPG" width="70%"alt="" />
 					<img src="images/project-AutoEncodedBuddha/6.JPG" alt="" />
 
 			</div><!-- // .desktop-0 -->
