--- a/project-breakingOut.html
+++ b/project-breakingOut.html
@@ -80,7 +80,7 @@
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -103,7 +103,7 @@
 				<script>
 				// ls -m | sed -e 's/, /", "/g'
 
-				var files = ["IMG_5064-1.JPG", "IMG_5081-1.JPG", "IMG_5107-1.JPG", "IMG_5129-1.JPG", "IMG_51922-1.jpg", "IMG_8587.jpg", "IMG_8634-1.jpg", "IMG_8773-1.jpg", "IMG_9344-1.jpg", "IMG_9373-1.jpg", "IMG_9415-1.jpg", "Screen Shot 2014-11-17 at 21.34.57-1.jpg", "Screen Shot 2015-05-03 at 01.05.26-1.jpg", "Screen Shot 2016-12-21 at 03.01.10-1.jpg", "Screen Shot 2016-12-21 at 03.05.07-1.jpg", "Screen Shot 2016-12-21 at 03.05.57-1.jpg", "ico wire overlay border-1.jpg", "ico wire overlay close-1.jpg", "wireframe 1-1.jpg", "zbrush-1.jpg"]
+				var files = ["IMG_51922-1.jpg", "IMG_5064-1.JPG", "IMG_5081-1.JPG", "IMG_5107-1.JPG", "IMG_5129-1.JPG", "IMG_8587.jpg", "IMG_8634-1.jpg", "IMG_8773-1.jpg", "IMG_9344-1.jpg", "IMG_9373-1.jpg", "IMG_9415-1.jpg", "Screen Shot 2014-11-17 at 21.34.57-1.jpg", "Screen Shot 2015-05-03 at 01.05.26-1.jpg", "Screen Shot 2016-12-21 at 03.01.10-1.jpg", "Screen Shot 2016-12-21 at 03.05.07-1.jpg", "Screen Shot 2016-12-21 at 03.05.57-1.jpg", "ico wire overlay border-1.jpg", "ico wire overlay close-1.jpg", "wireframe 1-1.jpg", "zbrush-1.jpg"]
 
 				for (file in files) {
 					var src = 'images/project-breakingOut/' + files[file]
