--- a/project-circuit.html
+++ b/project-circuit.html
@@ -79,7 +79,7 @@ Relief &amp; Intaglio prints made directly from circuit board surfaces. The circ
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
