--- a/project-digitalBlood.html
+++ b/project-digitalBlood.html
@@ -79,12 +79,13 @@
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
 							<p>
-								Text
+								HD Video (6 min)
+
 							</p>
 						</div><!-- // .box-info -->
 
