--- a/project-digitalWhisper.html
+++ b/project-digitalWhisper.html
@@ -80,7 +80,7 @@ Tweets in a 2 mile radius of the pieces’ installation are whispered by the com
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -102,6 +102,11 @@ Text to speech library.
 			</div><!-- // .desktop-3 .nested -->
 
 			<div class="desktop-9 tablet-12 columns">
+
+				<video controls autoplay loop  style="width: 100%;">
+				  <source src="images/project-digitalWhisper/whisperTweets2.mov" type="video/mp4">
+				  Your browser does not support the video tag.
+				</video><br><br>
 
 				<audio controls style="width: 100%;"
 				  src="images/project-digitalWhisper/sound/digitalWhisper1.mp3">
