--- a/project-iPhoneTouch.html
+++ b/project-iPhoneTouch.html
@@ -79,7 +79,7 @@
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -99,7 +99,9 @@
 
 			<div class="desktop-9 tablet-12 columns">
 
-				<img src="images/project-Behind The Screen/" alt="" />
+				<img src="images/project-iPhoneTouch/inside1.jpg" width="48%" alt="" />  &nbsp;&nbsp;
+				<img src="images/project-iPhoneTouch/inside2.jpg" width="48%" alt="" />
+				<img src="images/project-iPhoneTouch/project-iPhoneTouch.jpg" alt="" />
 
 			</div><!-- // .desktop-9 -->
 
