--- a/project-lineForWalk.html
+++ b/project-lineForWalk.html
@@ -81,7 +81,7 @@
 
 					<div class="clear"></div>
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -102,7 +102,9 @@
 
 			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/project-"Take a Line for a Walk/" alt="" />
+				<img src="images/project-lineForWalk/Bloomsbury.jpeg" alt="" />
+				<img src="images/project-lineForWalk/Chicago.jpg" alt="" />
+				<img src="images/project-lineForWalk/Heath.jpg" alt="" />
 
 			</div><!-- // .desktop-9 -->
 
