--- a/project-musicalTaxonomy.html
+++ b/project-musicalTaxonomy.html
@@ -91,7 +91,7 @@
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -140,7 +140,7 @@
 				// ls -m | sed -e 's/, /", "/g'
 
 				// var files = [""]
-				var files = ["All 7-small.jpg", "C Major 39sec above.jpg", "Cnoisy taxonomy Minor 14sec above.jpg", "ContactSheet-001-small.jpg", "Eb Major 37sec above.jpg", "Fnoisy taxonomy Minor 18sec above.jpg", "IMG_8596.jpg", "Screen Shot 2016-01-18 at 12.17.00.jpg", "Screen Shot 2016-04-28 at 11.08.00.jpg", "sound sculpts1.jpg", "spectro.jpg", "spectro0024.jpg", "spectro0043.jpg", "spectro0062.jpg", "z_All cross sections.jpg"]
+				var files = ["All 7-small.jpg", "C Major 39sec above.jpg",  "ContactSheet-001-small.jpg", "Eb Major 37sec above.jpg", "IMG_8596.jpg", "Screen Shot 2016-01-18 at 12.17.00.jpg", "Screen Shot 2016-04-28 at 11.08.00.jpg", "sound sculpts1.jpg", "spectro.jpg", "z_All cross sections.jpg"]
 
 				for (file in files) {
 					var src = 'images/project-musicalTaxonomy/' + files[file]
