--- a/project-nightSky.html
+++ b/project-nightSky.html
@@ -70,7 +70,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Blue Sky Thinking</h3>
-							<p class="project-desc">Video & AI Code - 2016
+							<p class="project-desc">Video &amp; AI Code - 2016
 </p>
 
 							<p>A convolutional neural network generates images of the night sky. It starts with random visual noise and then optimises the image through many generations making up each 30 second video.
@@ -81,7 +81,7 @@
 
 					<div class="clear"></div>
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -111,7 +111,7 @@ PixelCNN/Deep Convolutional Generative Adversarial Neural Network (DCGAN) runnin
 
 								<script>
 									function resizeDivs() {
-										$('#vid').css("height", $('#vid').width()/1.7777);
+										$('#vid').css("height", $('#vid').width()/1.6);
 
 									}
 									$(resizeDivs);
