--- a/project-soundParticles.html
+++ b/project-soundParticles.html
@@ -81,7 +81,7 @@
 
 					<div class="clear"></div>
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -103,7 +103,15 @@
 
 			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/project-Musical Mesh/" alt="" />
+				<img src="images/project-soundParticles/1.jpg" alt="" />
+				<img src="images/project-soundParticles/2.jpg" alt="" />
+				<img src="images/project-soundParticles/3.jpg" alt="" />
+				<img src="images/project-soundParticles/4.jpg" alt="" />
+				<img src="images/project-soundParticles/5.jpg" alt="" />
+				<img src="images/project-soundParticles/6.jpg" alt="" />
+				<img src="images/project-soundParticles/7.jpg" alt="" />
+				<img src="images/project-soundParticles/8.jpg" alt="" />
+
 
 			</div><!-- // .desktop-9 -->
 
