--- a/project-videoParticles.html
+++ b/project-videoParticles.html
@@ -79,7 +79,7 @@ Sandin image processor* manipulating a digital signal and employing two differen
 </p>
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -114,6 +114,15 @@ Custom Openframeworks program as input<br><br>
 	$(resizeDivs);
 	$(window).resize(resizeDivs);
 </script>
+<img src="images/project-videoParticles/1.jpg" alt="" />
+<img src="images/project-videoParticles/2.jpg" alt="" />
+<img src="images/project-videoParticles/3.jpg" alt="" />
+<img src="images/project-videoParticles/4.jpg" alt="" />
+<img src="images/project-videoParticles/5.jpg" alt="" />
+<img src="images/project-videoParticles/6.jpg" alt="" />
+<img src="images/project-videoParticles/7.jpg" alt="" />
+<img src="images/project-videoParticles/8.jpg" alt="" />
+
 			</div><!-- // .desktop-9 -->
 
 			<div class="clear"></div>
