--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 				<h2>About</h2>
 			</div>
 			<div class="desktop-9 tablet-12 columns">
-				<p class="page-desc">Make a memorable experience. Let your brand act in a way that well exceeds users' expectations. See what we can do to help you. </p>
+				<p class="page-desc">Jake Elwes’ studies explore both Fine Art and Computer Science, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. </p>
 			</div>
 		</div><!-- // .container -->
 
@@ -83,10 +83,18 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 tablet-6 columns">
-							<h4>Bio</h4>
-							<p>Architectural drawings are made according to a set of conventions, which include particular views (floor plan, section etc.), sheet sizes, units of measurement and scales, annotation and cross referencing. Conventionally, drawings were made in ink on paper or a similar material, and any copies required had to be laboriously made by hand. </p>
-						</div><!-- // .desktop-6 -->
+							<h4>Exhibitions</h4>
+							<p>
+							2016 - 'Slade Print Fair', Slade School of Fine Art, London <br>
+							2016 - ‘The Neural Aesthetic’, Acud Macht Neu, Berlin <br>
+							2016 -  'Skullpture', Grant Museum, University College, London <br>
+							2015 - 'You have got my bone', Foyles Bookshop, London <br>
+							2015 - ‘!!THIS TIM3 ITS R3AL!!’, Elastic Arts, Chicago <br>
+							2014 -  'Ben's Show', abandoned warehouse, Camden, London <br>
+							2014 - 'Public Show', Slade School of Fine Art Research Center, London <br>
+						</p>
 
+									</div><!-- // .desktop-6 -->
 						<div class="clear"></div>
 					</div><!-- // .item -->
 
@@ -99,8 +107,16 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 tablet-6 columns">
-							<h4>Education</h4>
-							<p>The development of the computer had a major impact on the methods used to design and create technical drawings, making manual draughting almost obsolete, and opening up new possibilities of form using organic shapes and complex geometry. Today the vast majority of drawings are created using CAD software.</p>
+							<h4>Background</h4>
+							<p>
+							Born 1993.  <br> <br>
+
+							Education: <br>
+
+							<b>Slade School of Art (UCL)</b>, BA - Fine Art Media, 2013-17 <br>
+							<b>SAIC (School of the Art Institute Chicago)</b>, International Exchange - Art & Technology, 2015 <br>
+							<b>Central St Martins (UAL)</b>, Foundation 2012-13 <br>
+						</p>
 						</div><!-- // .desktop-6 -->
 
 						<div class="clear"></div>
@@ -115,8 +131,15 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 pull-3 tablet-6 tablet-pull-0 columns">
-							<h4>Exhibtions</h4>
-							<p>Design, finance, and legal aspects overlap and interrelate. The design must be not only structurally sound and appropriate for the use and location, but must also be financially possible to build. The financial structure must accommodate the need for building the design provided, and must pay amounts that are legally owed. </p>
+							<h4>Further Qualifications</h4>
+							<p>
+								<b>‘The Neural Aesthetic - Machine Learning for Artists’</b>, School of Machines, Making &amp; Make-Believe, Berlin, 2016 <br>
+							<b>‘Programming Applications’</b>, Computer Science BSc Module, Kings College London 2015<br><br>
+
+							‘Java Programming’, London City University 2014<br>
+							‘Creative Applications of Deep Learning with TensorFlow’, Kadenze 2016<br>
+							‘Machine Learning’ (Stanford University), Coursera 2016<br>
+						</p>
 						</div><!-- // .desktop-6 -->
 
 						<div class="clear"></div>
@@ -131,8 +154,17 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 tablet-6 columns">
-							<h4>Blah</h4>
-							<p>A structure designed and constructed to have robustness will not suffer from disproportionate collapse (progressive collapse) under accidental loading. When it comes to steel framed buildings, to achieve robustness is about designing connections appropriately. Cncrete structures is less problem with structural robustness.</p>
+							<h4>Follow me</h4>
+							<p>
+							<ul id="social">
+								<li><a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook-official" style="padding-right: 10px;"></i>Facebook Page</a></li>
+								<li><a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"style="padding-right: 10px;"></i>Instagram</a></li>
+								<li><a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"style="padding-right: 10px;"></i>Vimeo</a></li>
+								<li><a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"style="padding-right: 10px;"></i>Linkedin</a></li>
+								<li><a href="https://www.facebook.com/jelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"style="padding-right: 10px;"></i>Personal Facebook</a></li>
+								<li><a href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"style="padding-right: 10px;"></i>Email me</a></li>
+							</ul><!-- // #social -->
+						</p>
 						</div><!-- // .desktop-6 -->
 
 						<div class="clear"></div>
