--- a/project-androidsSheep.html
+++ b/project-androidsSheep.html
@@ -77,7 +77,7 @@
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -105,7 +105,7 @@
 
 				<script>
 					function resizeDivs() {
-						$('#vid').css("height", $('#vid').width()/1.7777);
+						$('#vid').css("height", $('#vid').width()/1.6);
 					}
 					$(resizeDivs);
 					$(window).resize(resizeDivs);
