--- a/project-barberFugue.html
+++ b/project-barberFugue.html
@@ -80,7 +80,7 @@
 
 					<div class="clear"></div>
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -104,11 +104,11 @@ HD Video (4 minutes)
 
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-<id="vid2" iframe src="https://player.vimeo.com/video/198347274?title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>				<br></br>
+				<iframe id="vid2" src="https://player.vimeo.com/video/198347274?title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>				<br></br>
 
 				<script>
 					function resizeDivs() {
-						$('#vid2').css("height", $('#vid').width()/1.7777);
+						$('#vid2').css("height", $('#vid2').width()/1.7777);
 
 					}
 					$(resizeDivs);
