--- a/project-computerCrash.html
+++ b/project-computerCrash.html
@@ -81,7 +81,7 @@
 
 					<div class="clear"></div>
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -106,7 +106,12 @@ Photograms 20x30cm
 
 			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
-				<img src="images/project-Computer Crash/" alt="" />
+				<img src="images/project-computerCrash/1.jpg" alt="" />
+				<img src="images/project-computerCrash/2.jpg" alt="" />
+				<img src="images/project-computerCrash/3.jpg" alt="" />
+				<img src="images/project-computerCrash/4.jpg" alt="" />
+				<img src="images/project-computerCrash/5.jpg" alt="" />
+				<img src="images/project-computerCrash/6.jpg" alt="" />
 
 			</div><!-- // .desktop-9 -->
 
