--- a/project-dataPlot.html
+++ b/project-dataPlot.html
@@ -30,6 +30,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="includes/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 
 
@@ -77,7 +78,7 @@
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -95,10 +96,21 @@
 
 			</div><!-- // .desktop-3 .nested -->
 
-			<div class="desktop-9 tablet-12 columns">
+			<div id='pics' class="desktop-9 tablet-12 columns">
 
-				<img src="images/project-Big Data Plots/" alt="" />
 
+				<script>
+				// ls -m | sed -e 's/, /", "/g'
+
+				var files = ["IMG_4696.jpg", "IMG_4698.jpg", "IMG_4702.jpg", "IMG_4670.jpg", "IMG_4673.jpg", "IMG_4674.jpg", "IMG_4676.jpg", "IMG_4677.jpg", "IMG_4681.jpg", "IMG_4689.jpg", "IMG_4693.jpg", "IMG_4705.jpg", "IMG_4714.jpg", "IMG_4715.jpg"]
+
+				for (file in files) {
+					var src = 'images/project-dataPlot/' + files[file]
+					$("#pics").append('<img src="'+ src +'" alt=""/>')
+					// $('body').prepend('<img id="gif2" src="'+ src +'" width="100%" height="100%"/>')
+				}
+
+				</script>
 			</div><!-- // .desktop-9 -->
 
 			<div class="clear"></div>
