--- a/project-digitalTouch.html
+++ b/project-digitalTouch.html
@@ -78,7 +78,7 @@
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -100,15 +100,17 @@
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 				<!-- <img src="images/project-digitalTouch/Book.pdf" alt="" /> -->
-				<embed id="pdf" src="images/project-digitalTouch/Book.pdf" width="100%"  type='application/pdf'>
+				<embed id="pdf" src="images/project-digitalTouch/Book.pdf" width="100%" height="150px" type='application/pdf'>
 
 					<script>
 						function resizeDivs() {
-							$('#pdf').css("height", $('#vid').width());
+							$('#pdf').css("height", $('#pdf').width()*0.7);
 						}
 						$(resizeDivs);
 						$(window).resize(resizeDivs);
 					</script>
+
+					<!-- <iframe id="pdf" src="https://cdn.flipsnack.com/widget/flipsnackwidget.html?hash=fdh52mpze&bgcolor=EEEEEE&t=1483891832" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowTransparency="true" allowFullScreen="true"></iframe> -->
 
 				<img src="images/project-digitalTouch/Phone.jpg" alt="" />
 				<img src="images/project-digitalTouch/Camera.jpg" alt="" />
