--- a/project-drawingTennis.html
+++ b/project-drawingTennis.html
@@ -81,7 +81,7 @@ Multiple drawings are on the go, anybody can add to a drawing with the one const
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -102,7 +102,13 @@ back-end node.js server &amp; MongoDB
 
 			<div class="desktop-9 tablet-12 columns">
 
-				<img src="images/project-Drawing Tennis/" alt="" />
+				<img src="images/project-drawingTennis/1.jpg" alt="" />
+				<img src="images/project-drawingTennis/2.jpg" alt="" />
+				<img src="images/project-drawingTennis/3.jpg" alt="" />
+				<img src="images/project-drawingTennis/4.jpg" alt="" />
+				<img src="images/project-drawingTennis/5.jpg" alt="" />
+				<img src="images/project-drawingTennis/6.jpg" alt="" />
+				<img src="images/project-drawingTennis/7.jpg" alt="" />
 
 			</div><!-- // .desktop-9 -->
 
