--- a/project-haikuNews.html
+++ b/project-haikuNews.html
@@ -31,6 +31,7 @@
 	<link href="includes/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 
 	<!--[if lt IE 8]>
@@ -81,7 +82,7 @@ An AI algorithm (convolutional neural network) writes haikus about images being 
 
 					</div><!-- // .desktop-3 -->
 
-					<div class="desktop-3 tablet-6 mobile-half columns">
+					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
 							<h4 class="border-top">Materials</h4>
@@ -105,9 +106,21 @@ Handwriting Recurrent Neural Network www.cs.toronto.edu/~graves/handwriting.html
 
 			</div><!-- // .desktop-3 .nested -->
 
-			<div class="desktop-9 tablet-12 columns">
+			<div id="pics" class="desktop-9 tablet-12 columns">
 
-				<img src="images/project-Haiku News/" alt="" />
+
+				<script>
+				// ls -m | sed -e 's/, /", "/g'
+
+				var files = ["1.jpg", "10.jpg", "11.jpg", "12.jpg", "14.jpg", "15.jpg", "16.jpg", "2.jpg", "3.jpg", "4.jpg", "5.jpg", "6.jpg", "6a.jpg", "7.jpg", "8.jpg", "9.jpg"]
+
+				for (file in files) {
+					var src = 'images/project-haikuNews/' + files[file]
+					$("#pics").append('<img src="'+ src +'" alt=""/>')
+					// $('body').prepend('<img id="gif2" src="'+ src +'" width="100%" height="100%"/>')
+				}
+
+				</script>
 
 			</div><!-- // .desktop-9 -->
 
