--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 				<h2>About</h2>
 			</div>
 			<div class="desktop-9 tablet-12 columns">
-				<p class="page-desc">Jake Elwes’ studies explore both Fine Art and Computer Science, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. </p>
+				<p class="page-desc">Jake Elwes explores both Fine Art and Computer Science, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. </p>
 			</div>
 		</div><!-- // .container -->
 
